# MW_CA

MW_CA_QT/: CMakeLists.txt  buffer_device.cuh  mainwindow.cpp  mainwindow.h  mainwindow.ui
MW_CA_QT/mw_inc/: BC.hpp  Domain.hpp  GenerationManager.hpp  GeneratorMC.hpp  Nucleator.hpp  Random.hpp  basic_types.h
MW_CA_QT_build/: CMakeCache.txt  MW_CA_QT  Makefile  cmake_install.cmake
MW_CA_QT_build/.cmake/api/v1/reply/: codemodel-v2-6dfbf9a730de42c2f8af.json  directory-.-RelWithDebInfo-5fc31f2d56628956a0c3.json  index-2024-05-26T19-22-17-0435.json  target-MW_CA_QT-RelWithDebInfo-ff372ec8cb0d9bf461ba.json
MW_CA_QT_build/.cmake/api/v1/reply.prev/: cache-v2-77ec4ef62f6f78adc1c4.json  cmakeFiles-v1-57c7b2822345095911b0.json  codemodel-v2-f6c1243e8303a2b9ca06.json  index-2024-05-26T14-28-12-0248.json  target-MW_CA_QT-RelWithDebInfo-7ba21f130263d20c89c5.json  target-MW_CA_QT_autogen-RelWithDebInfo-3f550d7b8c80e2c568c6.json
MW_CA_QT_build/.qtc_clangd/: compile_commands.json
MW_CA_QT_build/.qtc_clangd/.cache/clangd/index/: BC.hpp.376AC7512C1D42FE.idx  Domain.hpp.14732911B8E71D57.idx  EasyBMP.h.229C973C961F909C.idx  EasyBMP_BMP.h.856CFC8B4C375141.idx  EasyBMP_DataStructures.h.E550358B2677C5B2.idx  EasyBMP_VariousBMPutilities.h.2FFF1FFCE6493C35.idx  GenerationManager.hpp.58C7F185465C8EFD.idx  Generator.hpp.B17ECD048B18CC84.idx  GeneratorCA.hpp.C4213CADCB5E0560.idx  Nucleator.hpp.4A7B15F067D1F8AE.idx  QLCDNumber.37EF3E073EF12361.idx  Random.hpp.D881BE2ECC1C96C0.idx  Rules.hpp.F660A2D033AB5A44.idx  assert.h.F44EF353D67C7E11.idx  basic_ios.h.56903B99DC4D5E6A.idx  (+68 more)
MW_CA_QT_build/MW_CA_QT_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
MW_CA_QT_build/MW_CA_QT_autogen/include/: ui_mainwindow.h
inc/: BC.hpp  Domain.hpp  GenerationManager.hpp  Generator.hpp  GeneratorCA.hpp  GeneratorMC.hpp  Nucleator.hpp  Rules.hpp  Timer.hpp  basic_types.h  gui.hpp  postproc.hpp
src/: BC.cpp  Domain.cpp  GenerationManager.cpp  Generator.cpp  GeneratorCA.cpp  GeneratorMC.cpp  Makefile  Nucleator.cpp  Random.cpp  Rules.cpp  Timer.cpp  gui.cpp  main.cpp  postproc.cpp
test/gui/: GenerartorApplication  GenerartorApplication.cpp
